--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,33 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poem = {version = "1",features = ["static-files"]}
+poem = "1"
 rust-embed="6"
 tokio = {version = "1",features = ["full"]}
-tracing-subscriber = "0.3.8"
+tracing-subscriber = {version = "0.3.8",features = ["env-filter","local-time"]}
 log = "0.4"
-mime_guess = "*"
-hex = "*"
+mime_guess = "2"
+hex = "0.4"
 tracing = "0.1"
+serde = "1"
+serde_json = "1"
+jwt-simple = "0.10"
+serde_repr = "0.1.7"
+validator = { version = "0.14.0", features = ["derive"] }
+regex = "1"
+lazy_static = "1"
+rbatis =  { version = "3.0", default-features = false, features = ["runtime-tokio-rustls","mysql"]} 
+toml = "0.5"
+colored = "2"
+rbson = "2"
+md5 = "0.7"
+anyhow = "1"
+chrono = "0.4"
+time = {version = "0.3",features = ["macros"]}
+thiserror = "1"
+const_format = "0.2.22"
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
+panic = "abort"
