--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "backend"
 version = "0.1.0"
 edition = "2021"
+#build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -21,7 +22,7 @@ serde_repr = "0.1.7"
 validator = { version = "0.14.0", features = ["derive"] }
 regex = "1"
 lazy_static = "1"
-rbatis =  { version = "3.0", default-features = false, features = ["runtime-tokio-rustls","mysql"]} 
+rbatis =  { version = "3.0.31", default-features = false, features = ["runtime-tokio-rustls","mysql","sqlite"]} 
 toml = "0.5"
 colored = "2"
 rbson = "2"
@@ -30,9 +31,12 @@ anyhow = "1"
 chrono = "0.4"
 time = {version = "0.3",features = ["macros"]}
 thiserror = "1"
-const_format = "0.2.22"
+
+[build-dependencies]
+npm_rs = "0.2"
 
 [profile.release]
 lto = "fat"
 codegen-units = 1
 panic = "abort"
+debug = false
