--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 poem = "1"
 rust-embed="6"
-tokio = {version = "1",features = ["full"]}
+tokio = {version = "1",features = ["rt-multi-thread","net","macros"]}
 tracing-subscriber = {version = "0.3.8",features = ["env-filter","local-time"]}
 log = "0.4"
 mime_guess = "2"
@@ -40,3 +40,10 @@ lto = "fat"
 codegen-units = 1
 panic = "abort"
 debug = false
+
+[profile.dev]
+codegen-units = 1024
+panic = "abort"
+debug = false
+incremental = true
+opt-level = 0
