--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poem = "1"
-rust-embed="6"
-tokio = {version = "1",features = ["rt-multi-thread","net","macros"]}
-tracing-subscriber = {version = "0.3.8",features = ["env-filter","local-time"]}
+poem = {version = "1",features = ["embed"]}
+rust-embed = { version="6",features = ["compression"]}
+tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
+tracing-subscriber = { version = "0.3.8", features = [
+    "env-filter",
+    "time"
+] }
 log = "0.4"
-mime_guess = "2"
-hex = "0.4"
-tracing = "0.1"
 serde = "1"
 serde_json = "1"
 jwt-simple = "0.10"
@@ -22,14 +22,17 @@ serde_repr = "0.1.7"
 validator = { version = "0.14.0", features = ["derive"] }
 regex = "1"
 lazy_static = "1"
-rbatis =  { version = "3.0.31", default-features = false, features = ["runtime-tokio-rustls","mysql","sqlite"]} 
+rbatis = { version = "3.0.31", default-features = false, features = [
+    "runtime-tokio-rustls",
+    "mysql",
+    "sqlite",
+] }
 toml = "0.5"
 colored = "2"
 rbson = "2"
 md5 = "0.7"
-anyhow = "1"
 chrono = "0.4"
-time = {version = "0.3",features = ["macros"]}
+time = { version = "0.3",features = ["parsing"]}
 thiserror = "1"
 
 [build-dependencies]
@@ -40,6 +43,7 @@ lto = "fat"
 codegen-units = 1
 panic = "abort"
 debug = false
+incremental = false
 
 [profile.dev]
 codegen-units = 1024
