--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poem = {version = "1",features = ["embed"]}
-rust-embed = { version="6",features = ["compression"]}
+poem = { version = "1", features = ["embed"] }
+rust-embed = { version = "6", features = ["compression"] }
 tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
-tracing-subscriber = { version = "0.3.8", features = [
-    "env-filter",
-    "time"
-] }
+tracing-subscriber = { version = "0.3.8", features = ["env-filter", "time"] }
 log = "0.4"
 serde = "1"
 serde_json = "1"
-jwt-simple = "0.10"
+jwt-simple = "0.11"
 serde_repr = "0.1.7"
 validator = { version = "0.14.0", features = ["derive"] }
 regex = "1"
@@ -32,7 +29,7 @@ colored = "2"
 rbson = "2"
 md5 = "0.7"
 chrono = "0.4"
-time = { version = "0.3",features = ["parsing"]}
+time = { version = "0.3", features = ["parsing"] }
 thiserror = "1"
 
 [build-dependencies]
